# SIBR-Core

./: CMakeLists.txt  LICENSE.md  README.md
cmake/: dependencies.cmake
cmake/linux/: dependencies.cmake
src/: CMakeLists.txt
src/core/: CMakeLists.txt  sibr_core.config.cmake.in
src/core/assets/: CameraRecorder.cpp  CameraRecorder.hpp  InputCamera.cpp
src/core/graphics/: Image.hpp  Mesh.cpp  Mesh.hpp  RenderTarget.hpp  Viewport.hpp  Window.cpp
src/core/openxr/: OpenXRHMD.cpp  OpenXRHMD.hpp  OpenXRRdrMode.cpp  OpenXRRdrMode.hpp
src/core/renderer/: PointBasedRenderer.cpp
src/core/system/: Utils.cpp
src/core/view/: FPSCamera.cpp  FPSCamera.hpp  IBRBasicUtils.hpp  InteractiveCameraHandler.cpp  InteractiveCameraHandler.hpp  MultiMeshManager.cpp  MultiMeshManager.hpp  SceneDebugView.cpp  SceneDebugView.hpp
src/projects/gaussianviewer/apps/gaussianViewer/: main.cpp
src/projects/gaussianviewer/renderer/: GaussianView.cpp
src/projects/remote/renderer/: RemotePointView.cpp  RemotePointView.hpp
src/projects/semanticviewer/: CMakeLists.txt
src/projects/semanticviewer/apps/: CMakeLists.txt
src/projects/semanticviewer/apps/semanticViewer/: CMakeLists.txt  main.cpp
src/projects/semanticviewer/renderer/: CMakeLists.txt  Config.hpp  GaussianView.cpp  GaussianView.hpp
